<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/mastercard_grey">

            <ImageView
                android:id="@+id/menu_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_baseline_menu_24"
                android:contentDescription="@string/menu_description" />

            <TextView
                android:text="@string/device_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/enterprise_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="10dp"/>

                <EditText
                    android:id="@+id/enterprise_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enterprise_id"
                    android:inputType="text"
                    android:importantForAutofill="no" />

                <TextView
                    android:text="@string/line_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="10dp"/>

                <EditText
                    android:id="@+id/line_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/line_id"
                    android:inputType="text"
                    android:importantForAutofill="no" />

                <TextView
                    android:text="@string/vehicle_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="10dp"/>

                <EditText
                    android:id="@+id/vehicle_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vehicle_id"
                    android:inputType="text"
                    android:importantForAutofill="no" />

                <TextView
                    android:text="@string/device_serial_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="10dp"/>

                <EditText
                    android:id="@+id/device_sn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/device_serial_number"
                    android:inputType="text"
                    android:importantForAutofill="no" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/mastercard_grey">

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textColor="@color/mastercard_grey"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next"
                android:textColor="@color/mastercard_grey"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>